changes some css

--- a/Frontend/src/app/authentication/components/header/header.component.html
+++ b/Frontend/src/app/authentication/components/header/header.component.html
@@ -60,7 +60,7 @@
             ></path>
           </g>
         </svg>
-        <h2>Skill Hive</h2>
+        <h2><span class="green-text">Skill</span>Hive</h2>
       </div>
       <div class="headerLinks"><a href="/home">Home</a></div>
       <div class="headerLinks"><a href="/about">About us</a></div>
