--- a/Frontend/src/app/authentication/components/header/header.component.scss
+++ b/Frontend/src/app/authentication/components/header/header.component.scss
@@ -26,8 +26,10 @@
         flex-direction: row;
         h2 {
           margin: 0px 12px 0px 6px;
-          color: #18ac38;
         }
+      }
+      .green-text{
+        color:green;
       }
 
       .menuIcon {
